--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = "0.11"
-ping = "0.5"
+reqwest = { version = "0.11", features = ["json"] }
+env_logger = "0.10"
 log = "0.4"
-env_logger = "0.9"
+ping = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 rocket = { version = "0.5.1", features = ["json"] }
 serde_json = "1.0"
