--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,14 @@ serde_json = "1.0"
 rand = "0.8"
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4"
+tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
+uuid = { version = "1.7", features = ["v4", "serde"] }
+dotenv = "0.15"
+futures = "0.3"
+async-trait = "0.1"
+thiserror = "1.0"
+anyhow = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
+base64 = "0.21"
